include/plasma_s.h

int PLASMA_spocon(PLASMA_enum uplo, int N, float *A, int LDA, float anorm, float *rcond);
int PLASMA_ssymm(PLASMA_enum side, PLASMA_enum uplo, int M, int N, float alpha, float *A, int LDA, float *B, int LDB, float beta, float *C, int LDC);
int PLASMA_ssyrk(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, float alpha, float *A, int LDA, float beta, float *C, int LDC);
int PLASMA_ssyr2k(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, float alpha, float *A, int LDA, float *B, int LDB, float beta, float *C, int LDC);
int PLASMA_ssygvd(PLASMA_enum itype, PLASMA_enum jobz, PLASMA_enum uplo, int N, float *A, int LDA, float *B, int LDB, float *W, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_ssytrd(PLASMA_enum jobz, PLASMA_enum uplo, int N, float *A, int LDA, float *D, float *E, PLASMA_desc *descT, float *Q, int LDQ);
int PLASMA_slacpy(PLASMA_enum uplo, int M, int N, float *A, int LDA, float *B, int LDB);
float PLASMA_slange(PLASMA_enum norm, int M, int N, float *A, int LDA);
float PLASMA_slansy(PLASMA_enum norm, PLASMA_enum uplo, int N, float *A, int LDA);
float PLASMA_slansy(PLASMA_enum norm, PLASMA_enum uplo, int N, float *A, int LDA);
float PLASMA_slantr(PLASMA_enum norm, PLASMA_enum uplo, PLASMA_enum diag, int M, int N, float *A, int LDA);
int PLASMA_slaset(PLASMA_enum uplo, int M, int N, float alpha, float beta, float *A, int LDA);
int PLASMA_slaswp( int N, float *A, int LDA, int K1, int K2, const int *IPIV, int INCX);
int PLASMA_slaswpc(int N, float *A, int LDA, int K1, int K2, const int *IPIV, int INCX);
int PLASMA_slauum(PLASMA_enum uplo, int N, float *A, int LDA);
int PLASMA_splgsy( float bump, int N, float *A, int LDA, unsigned long long int seed);
int PLASMA_splgsy( float bump, int N, float *A, int LDA, unsigned long long int seed);
int PLASMA_splrnt( int M, int N, float *A, int LDA, unsigned long long int seed);
int PLASMA_spltmg( PLASMA_enum mtxtype, int M, int N, float *A, int LDA, unsigned long long int seed);
int PLASMA_ssymm(PLASMA_enum side, PLASMA_enum uplo, int M, int N, float alpha, float *A, int LDA, float *B, int LDB, float beta, float *C, int LDC);
int PLASMA_ssyrk(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, float alpha, float *A, int LDA, float beta, float *C, int LDC);
int PLASMA_ssyr2k(PLASMA_enum uplo, PLASMA_enum trans, int N, int K, float alpha, float *A, int LDA, float *B, int LDB, float beta, float *C, int LDC);