control/plasma_sf90.F90


      interface
         function PLASMA_ssygvd_c(itype,jobz,uplo,N,A,LDA,B,LDB,W,descT,Q,LDQ) &
          & bind(c, name='PLASMA_ssygvd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssygvd_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            type(c_ptr), value :: W
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssygvd_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssymm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_ssymm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssymm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_ssymm_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssyr2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_ssyr2k')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyr2k_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_ssyr2k_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssyrk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='PLASMA_ssyrk')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyrk_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_ssyrk_c
      end interface
#endif

      interface
         function PLASMA_ssytrd_c(jobz,uplo,N,A,LDA,D,E,descT,Q,LDQ) &
          & bind(c, name='PLASMA_ssytrd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssytrd_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssytrd_c
      end interface

      interface
         function PLASMA_slacpy_c(uplo,M,N,A,LDA,B,LDB) &
          & bind(c, name='PLASMA_slacpy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slacpy_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function PLASMA_slacpy_c
      end interface

      interface
         function PLASMA_slange_c(norm,M,N,A,LDA) &
          & bind(c, name='PLASMA_slange')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slange_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slange_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_slansy_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_slansy')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slansy_c
      end interface
#endif

      interface
         function PLASMA_slansy_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_slansy')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slansy_c
      end interface

      interface
         function PLASMA_slantr_c(norm,uplo,diag,M,N,A,LDA) &
          & bind(c, name='PLASMA_slantr')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slantr_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slantr_c
      end interface

      interface
         function PLASMA_slaset_c(uplo,M,N,alpha,beta,A,LDA) &
          & bind(c, name='PLASMA_slaset')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaset_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            real(kind=c_float), value :: alpha
            real(kind=c_float), value :: beta
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slaset_c
      end interface

      interface
         function PLASMA_slaswp_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_slaswp')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaswp_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_slaswp_c
      end interface

      interface
         function PLASMA_slaswpc_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_slaswpc')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaswpc_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_slaswpc_c
      end interface

      interface
         function PLASMA_slauum_c(uplo,N,A,LDA) &
          & bind(c, name='PLASMA_slauum')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slauum_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_slauum_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_splgsy_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_splgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splgsy_c
            real(kind=c_float), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splgsy_c
      end interface
#endif

      interface
         function PLASMA_splgsy_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_splgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splgsy_c
            real(kind=c_float), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splgsy_c
      end interface

      interface
         function PLASMA_splrnt_c(M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_splrnt')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splrnt_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splrnt_c
      end interface

      interface
         function PLASMA_spltmg_c(mtxtype,M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_spltmg')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spltmg_c
            integer(kind=c_int), value :: mtxtype
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_spltmg_c
      end interface

      interface
         function PLASMA_spocon_c(uplo,N,A,LDA,anorm,rcond) &
          & bind(c, name='PLASMA_spocon')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spocon_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_spocon_c
      end interface
